# s3_oop_labs

./: .gitignore  oop_test.sln  s3_oop_labs.sln
lab1/: CMakeLists.txt
lab2/: CMakeLists.txt  s3_oop_lab2.cpp
s3_oop_lab1/: s3_oop_lab1.cpp  s3_oop_lab1.vcxproj  s3_oop_lab1.vcxproj.filters  some_vector.cpp  some_vector.h
s3_oop_lab2/: s3_oop_lab2.cpp  s3_oop_lab2.vcxproj  s3_oop_lab2.vcxproj.filters  some_matrix.cpp  some_matrix.h  stuffs.cpp  stuffs.h
s3_oop_lab3/: just_matrix.cpp  just_matrix.h  just_vector.cpp  just_vector.h  s3_oop_lab3.cpp  s3_oop_lab3.vcxproj  s3_oop_lab3.vcxproj.filters  stuffs.cpp
